--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,8 +16,8 @@ repositories {
 }
 
 dependencies {
-    // Use JUnit Jupiter for testing.
     testImplementation libs.junit.jupiter
+    testImplementation libs.mockito.junit.jupiter 
 
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
